# Photoelasticity

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml  python-app.yml
force_cache/: cache.db  cache.db-shm  cache.db-wal
matlab/: customDiskSolver.m
photoelasticity/: __main__.py  array_tools.py  data.py  data_processing.py  day1.py  day2.py  fit_curve.py  image_detection.py  matrix_tools.py  processing.py
photoelasticity/days/: data.py  day1.py  day2.py  day3.py  day4.py
photoelasticity/forces/: disk_solve.py  find forces.py  force statistics.py  force_statistics.py
photoelasticity/fringes/: fit_curve.py
photoelasticity/image_detection/: image_detection.py
photoelasticity/tools/: matlab.py  matrix_tools.py  multiprocessing.py
tests/tools/: test_array_tools.py  test_matrix_tools.py
