[project]
name = "photoelasticity"
version = "0.0.1"
authors = [
]
description = "A package for analyzing photoelastic stress data"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/shoham-b/Photoelasticity"
Issues = "https://github.com/shoham-b/Photoelasticity/issues"