[project]
name = "photoelasticity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diskcache>=5.6.3",
    "matlab>=0.1",
    "matlabengine>=24.2.2",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "opencv-python>=4.11.0.86",
    "pytest>=8.3.4",
    "scikit-image>=0.25.0",
    "scipy>=1.15.1",
]
